# str.h

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: str.c  str.h  str_test.cc
